# trilium-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
src/trilium_mcp/: __init__.py  client.py  cloudflare_access.py  config.py  errors.py  server.py
src/trilium_mcp/tools/: branches.py  notes.py
tests/: test_client.py  test_cloudflare_access.py  test_config.py  test_server.py  test_tools.py
