[project]
name = "trilium-mcp"
version = "0.1.0"
description = "MCP server for TriliumNext ETAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28,<1",
    "mcp[cli]>=1.28.1,<2",
    "pyjwt[crypto]>=2.10,<3",
    "uvicorn>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
